--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   publish:
+    env:
+      working-directory: /go/src/github.com/asvoboda/golangtest
     name: Publish
     runs-on: ubuntu-latest
 
