--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -27,7 +27,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-      run: go test -v
+      run:|
+        echo $GOPATH
+        go test -v
 
     - name: Test
-      run: ./godelw verify --apply=false --junit-output="$TESTS_DIR/$CIRCLE_PROJECT_REPONAME-tests.xml"
+      run:|
+        echo $GOPATH
+        ./godelw verify --apply=false
