--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   verify:
     env:
+      GOPATH: /go/src/github.com/asvoboda/golangtest
       working-directory: /go/src/github.com/asvoboda/golangtest
     name: Verify
     runs-on: ubuntu-latest
@@ -29,9 +30,11 @@ jobs:
     - name: Test
       run: |
           echo $GOPATH
+          pwd
           go test -v
 
     - name: Test
       run: |
           echo $GOPATH
+          pwd
           ./godelw verify --apply=false
