--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,9 @@ jobs:
       GOPATH: /go/src/github.com/asvoboda/golangtest
     name: Publish
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: /go/src/github.com/asvoboda/golangtest
 
     steps:
     - name: Install Go
