--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -28,12 +28,15 @@ jobs:
 
     - name: Test
       run: |
-          echo $GOPATH
           pwd
           go test -v
 
     - name: Test
       run: |
-          echo $GOPATH
           pwd
           ./godelw verify --apply=false
+
+    - name: build
+      run: |
+          pwd
+          ./godelw docker build --verbose
